Fixed submenu overlapping and consistency

--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@
             <div class="relative group nav-item-hosting">
                 <a href="#" class="text-gray-700 hover:text-blue-600 transition duration-200">Hosting</a>
                 <!-- Submenu with a fixed height and overflow-y: auto -->
-                <div class="submenu-hosting absolute left-0 mt-2 w-48 bg-white shadow-lg hidden group-hover:block">
-                    <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Shared Hosting</a>
-                    <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Managed Hosting</a>
-                    <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">VPS Hosting: Unmanaged</a>
-                    <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">VPS Hosting: Managed</a>
+                <div class="submenu-hosting absolute left-0 mt-2 w-48 bg-white shadow-lg">
+                    <div class="submenu-content">
+                        <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Shared Hosting</a>
+                        <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Managed Hosting</a>
+                        <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">VPS Hosting: Unmanaged</a>
+                        <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">VPS Hosting: Managed</a>
+                    </div>
                 </div>
+                
             </div>
             <a href="#" class="text-gray-700 hover:text-blue-600 transition duration-200">Technology</a>
             <a href="#" class="text-gray-700 hover:text-blue-600 transition duration-200">Help Center</a>
