--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
 
   <!--  (Bootstrap JS) -->
    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script> -->
-   <script src="script.js"></script> <!-- Make sure the path is correct -->
+   <script src="menu.js"></script>
+   <script src="submenu.js"></script> <!-- Make sure the path is correct -->
 </body>
 </html>
