--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
                 <!-- Centered Cards -->
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8 justify-items-center">
                     <div class="feature-card text-center p-6 bg-gray-100 rounded-lg shadow w-full md:w-auto">
-                        <img src="images/icon-speed.svg" alt="Speed Icon" class="h-12 mx-auto mb-4">
+                        <img src="images/icon-speed.png" alt="Speed Icon" class="h-12 mx-auto mb-4">
                         <h3 class="text-xl font-semibold text-gray-700 mb-2">Lightning-Fast Servers</h3>
                         <p class="text-gray-600">Our servers are optimized for maximum speed and performance.</p>
                     </div>
                     <div class="feature-card text-center p-6 bg-gray-100 rounded-lg shadow w-full md:w-auto">
-                        <img src="images/icon-uptime.svg" alt="Uptime Icon" class="h-12 mx-auto mb-4">
+                        <img src="images/icon-uptime.png" alt="Uptime Icon" class="h-12 mx-auto mb-4" style="position: relative; left: 20px;">
                         <h3 class="text-xl font-semibold text-gray-700 mb-2">99.9% Uptime Guarantee</h3>
                         <p class="text-gray-600">Count on us to keep your website online and accessible 24/7.</p>
                     </div>
                     <div class="feature-card text-center p-6 bg-gray-100 rounded-lg shadow w-full md:w-auto">
-                        <img src="images/icon-support.svg" alt="Support Icon" class="h-12 mx-auto mb-4">
+                        <img src="images/icon-support.png" alt="Support Icon" class="h-12 mx-auto mb-4">
                         <h3 class="text-xl font-semibold text-gray-700 mb-2">24/7 Expert Support</h3>
                         <p class="text-gray-600">Our support team is available to assist you with any issues.</p>
                     </div>
@@ -295,6 +295,6 @@
   <!--  (Bootstrap JS) -->
    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script> -->
    <script src="menu.js"></script>
-   <script src="submenu.js"></script> <!-- Make sure the path is correct -->
+    <!-- Make sure the path is correct -->
 </body>
 </html>
