--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
         <!-- Navbar -->
 <nav class="bg-white shadow-md py-4">
-    <div class="container mx-auto flex items-center justify-between px-6">
+    <div class="container mx-auto flex items-center justify-between px-4">
         <!-- Logo on the Left -->
         <a href="/" class="flex-shrink-0 mr-4">
-            <img src="images/logo.png" alt="Super Hosting Logo" class="h-14">
+            <img src="images/logo.png" alt="Super Hosting Logo" class="h-14 pl-4">
         </a>
 
         <!-- Hamburger Menu Icon (Hidden on Large Screens) -->
