Fixed mobile menu, where on smaller screens, the login button and language selector were flowing when you scroll.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <li class="bg-blue-300 text-blue-600 font-semibold px-3 py-1 rounded inline-block">CPGuard Protection</li>
                         <li>Basic Support</li>
                     </ul>
-                    <a href="https://billing.superhosting.vip" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded transition duration-200">Choose plan</a>
+                    <a href="https://billing.superhosting.vip/cart.php?a=add&pid=1" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-6 rounded-lg transition duration-200">Order Now</a>
                 </div>
                 <div class="bg-white rounded-lg shadow-md p-8">
                     <h3 class="text-2xl font-semibold text-gray-700 mb-4">Stellar Standard</h3>
@@ -144,7 +144,7 @@
                         <li class="bg-blue-300 text-blue-600 font-semibold px-3 py-1 rounded inline-block">CPGuard Protection</li>
                         <li>Basic Support</li>
                     </ul>
-                    <a href="https://billing.superhosting.vip" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded transition duration-200">Choose plan</a>
+                    <a href="https://billing.superhosting.vip/cart.php?a=add&pid=2" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-6 rounded-lg transition duration-200">Order Now</a>
                 </div>
                  <div class="bg-white rounded-lg shadow-md p-8">
                     <h3 class="text-2xl font-semibold text-gray-700 mb-4">Advanced</h3>
@@ -159,7 +159,7 @@
                         <li class="bg-blue-300 text-blue-600 font-semibold px-3 py-1 rounded inline-block">CPGuard Protection</li>
                         <li>Basic Support</li>
                     </ul>
-                   <a href="https://billing.superhosting.vip" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded transition duration-200">Choose plan</a>
+                   <a href="https://billing.superhosting.vip/cart.php?a=add&pid=3" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-6 rounded-lg transition duration-200">Order Now</a>
                  </div>   
         </div>
         
@@ -175,7 +175,7 @@
                          <li>1 Website</li>
                          <li>Basic Support</li>
                      </ul>
-                     <a href="https://billing.superhosting.vip" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded transition duration-200">Choose plan</a>
+                     <a href="https://billing.superhosting.vip/cart.php?a=add&pid=4" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-6 rounded-lg transition duration-200">Order Now</a>
                  </div>
                  <div class="bg-white rounded-lg shadow-md p-8">
                      <h3 class="text-2xl font-semibold text-gray-700 mb-4">Standard</h3>
@@ -186,7 +186,7 @@
                          <li>5 Websites</li>
                          <li>Premium Support</li>
                      </ul>
-                     <a href="https://billing.superhosting.vip" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded transition duration-200">Choose plan</a>
+                     <a href="https://billing.superhosting.vip/cart.php?a=add&pid=5" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-6 rounded-lg transition duration-200">Order Now</a>
                  </div>
                   <div class="bg-white rounded-lg shadow-md p-8">
                     <h3 class="text-2xl font-semibold text-gray-700 mb-4">Advanced</h3>
@@ -197,7 +197,7 @@
                         <li>10 Websites</li>
                         <li>VIP Support</li>
                     </ul>
-                     <a href="https://billing.superhosting.vip" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded transition duration-200">Choose plan</a>
+                     <a href="https://billing.superhosting.vip/cart.php?a=add&pid=6" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-6 rounded-lg transition duration-200">Order Now</a>
                  </div>
          </div>
 
@@ -221,7 +221,7 @@
                     <li>1 Website</li>
                     <li>Basic Support</li>
                 </ul>
-                <a href="https://billing.superhosting.vip" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded transition duration-200">Choose plan</a>
+                <a href="https://billing.superhosting.vip/cart.php?a=add&pid=7" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-6 rounded-lg transition duration-200">Order Now</a>
              </div>
              <div class="bg-white rounded-lg shadow-md p-8">
                  <h3 class="text-2xl font-semibold text-gray-700 mb-4">Standard</h3>
@@ -232,7 +232,7 @@
                      <li>5 Websites</li>
                       <li>Premium Support</li>
                  </ul>
-                 <a href="https://billing.superhosting.vip" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded transition duration-200">Choose plan</a>
+                 <a href="https://billing.superhosting.vip/cart.php?a=add&pid=8" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-6 rounded-lg transition duration-200">Order Now</a>
             </div>
              <div class="bg-white rounded-lg shadow-md p-8">
                 <h3 class="text-2xl font-semibold text-gray-700 mb-4">Advanced</h3>
@@ -243,7 +243,7 @@
                     <li>10 Websites</li>
                     <li>VIP Support</li>
                 </ul>
-                <a href="https://billing.superhosting.vip" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded transition duration-200">Choose plan</a>
+                <a href="https://billing.superhosting.vip/cart.php?a=add&pid=9" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-6 rounded-lg transition duration-200">Order Now</a>
             </div>
          </div>
         
@@ -258,7 +258,7 @@
                     <li>1 Website</li>
                     <li>Basic Support</li>
                   </ul>
-                <a href="https://billing.superhosting.vip" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded transition duration-200">Choose plan</a>
+                <a href="https://billing.superhosting.vip/cart.php?a=add&pid=10" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-6 rounded-lg transition duration-200">Order Now</a>
             </div>
             <div class="bg-white rounded-lg shadow-md p-8">
                 <h3 class="text-2xl font-semibold text-gray-700 mb-4">Standard</h3>
@@ -269,7 +269,7 @@
                      <li>5 Websites</li>
                     <li>Premium Support</li>
                 </ul>
-                <a href="https://billing.superhosting.vip" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded transition duration-200">Choose plan</a>
+                <a href="https://billing.superhosting.vip/cart.php?a=add&pid=11" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-6 rounded-lg transition duration-200">Order Now</a>
             </div>
             <div class="bg-white rounded-lg shadow-md p-8">
                <h3 class="text-2xl font-semibold text-gray-700 mb-4">Advanced</h3>
@@ -280,7 +280,7 @@
                     <li>10 Websites</li>
                     <li>VIP Support</li>
                 </ul>
-                <a href="https://billing.superhosting.vip" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded transition duration-200">Choose plan</a>
+                <a href="https://billing.superhosting.vip/cart.php?a=add&pid=12" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-6 rounded-lg transition duration-200">Order Now</a>
              </div>
         </div>
     </div>
